--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,15 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.0.RELEASE</version>
+		<version>2.2.7.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>1.8</java.version>
-        <org.mapstruct.version>1.2.0.CR2</org.mapstruct.version>
+        <java.version>11</java.version>
+        <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <springfox-swagger.version>2.7.0</springfox-swagger.version>
     </properties>
 
